--- a/Cloud.html
+++ b/Cloud.html
@@ -76,6 +76,7 @@ div .urc {
 	background: #FFF;
 }
 </style>
+<script src="https://github.com/serenechen/Move-Ajax-JSONP-Functions/blob/master/ajax.js"></script>
 <script type="text/javascript">
 window.onload = function() {
 	var oCloud = document.getElementById('cloud');
