change external address for move.js

--- a/Cloud.html
+++ b/Cloud.html
@@ -76,7 +76,7 @@ div .urc {
 	background: #FFF;
 }
 </style>
-<script src="https://github.com/serenechen/Move-Ajax-JSONP-Functions/blob/master/ajax.js"></script>
+<script src="https://raw.githubusercontent.com/serenechen/Move-Ajax-JSONP-Functions/master/move.js"></script>
 <script type="text/javascript">
 window.onload = function() {
 	var oCloud = document.getElementById('cloud');
