Export moveCloud.js

--- a/Cloud.html
+++ b/Cloud.html
@@ -76,35 +76,11 @@ div .urc {
 	background: #FFF;
 }
 </style>
-<script src="https://raw.githubusercontent.com/serenechen/Move-Ajax-JSONP-Functions/master/move.js"></script>
+<script src="moveCloud.js"></script>
 <script type="text/javascript">
 window.onload = function() {
 	var oCloud = document.getElementById('cloud');
-	move(oCloud,1,1);
-	
-	function move(obj,speedX,speedY) {   //pass the object and initial speed
-		var left = obj.offsetLeft;
-		var top = obj.offsetTop;	
-		var maxL = document.documentElement.clientWidth-obj.offsetWidth-100;
-		var minL = 10;
-		var maxT = 150;
-		var minT = 1;
-		clearInterval(obj.timer);
-		obj.timer = setInterval(function() {
-			var l = left+speedX;
-			var t = top+speedY;
-			if(l>=maxL||l<=100) {
-				speedX*=-1;
-			}
-			if(t>=maxT||t<=100) {
-				speedY*=-1;
-			}
-			left = l;
-			top = t;
-			obj.style.left = left+'px';
-			obj.style.top = top+'px';
-		},30);
-	}
+	move(oCloud,1,1);	
 };
 </script>
 </head>
